<resources>
    <string name="see_connections">voir les connexions</string>
    <string name="stop">Arrêtez</string>
    <string name="permission_location_rationale">Veuillez autoriser la localisation - Google en a besoin pour que votre téléphone recherche le Bluetooth d\'un autre téléphone. Nous n\'utilisons ni stockons votre emplacement.</string>
    <string name="permission_write_rationale">Wiqaytna a besoin de fichiers de sauvegarde pour les journaux (versions de débogage uniquement)</string>
    <string name="ble_not_supported">Cet appareil ne prend pas en charge BLE</string>
    <string name="tv_onboarding_title">Participons tous à la lutte contre la propagation du Coronavirus COVID-19</string>
    <string name="tv_onboarding_desc">Wiqaytna vous notifie si l\’une des personnes qui s\’est trouvée à proximité de vous récemment est confirmée positive au COVID-19 </string>
    <string name="tv_onboarding_desc_sub">Pour protéger votre entourage, Le ministère de la santé peut également vous demander de partager vos données.</string>
    <string name="i_want_to_help">Continuer</string>
    <string name="tv_howitworks_title">Comment fonctionne Wiqaytna</string>
    <string name="tv_howitworks_explanation_1">Nous utilisons des signaux Bluetooth pour déterminer si vous êtes près d\'un autre utilisateur de Wiqaytna.</string>
    <string name="tv_howitworks_explanation_2">Ces données de proximité sont cryptées et stockées uniquement sur votre téléphone.</string>
    <string name="tv_howitworks_explanation_3">L\'Le ministère de la santé demandera votre consentement pour télécharger les données, si cela est nécessaire pour la recherche des contacts.</string>
    <string name="mobile_number">Numéro de portable </string>
    <string name="register_number">Veuillez saisir votre numéro de téléphone </string>
    <string name="register_number_details">Nous vous contacterons si vous avez été en contact étroit avec une personne infectée par COVID-19.</string>
    <string name="register_number_family">Vous installez pour votre famille? Utilisez leur numéro au lieu du vôtre.</string>
    <string name="invalid_length">Doit être composé de 8 chiffres</string>
    <string name="invalid_number">Numéro de portable invalide</string>
    <string name="enter_otp">Veuillez saisir le code de confirmation que vous avez reçu par SMS</string>
    <string name="otp_sent">Un code à 6 chiffres a été envoyé à %s.</string>
    <string name="resend_code">Renvoyer le code</string>
    <string name="setup_app_permission">Veuillez accorder les autorisations nécessaires </string>
    <string name="setup_app_permission_title">Sélectionnez  <b>Oui</b> ou <b>Autoriser</b> pour les prochains écrans à configurer.</string>
    <string name="bluetooth">Activation du Bluetooth</string>
    <string name="location_permissions">Autorisations de localisation</string>
    <string name="battery_optimiser_opt">Optimiseur de batterie</string>
    <string name="notes">Android a besoin des autorisations de localisation pour que le Bluetooth fonctionne. Nous n\'avons pas accès à votre emplacement physique.</string>
    <string name="proceed">Procéder</string>
    <string name="continue_">Continuer</string>
    <string name="get_otp">Confirmer</string>
    <string name="wrong_number"><u>Mauvais numéro?</u></string>
    <string name="app_permission_fully_setup">Les autorisations d\'application sont entièrement configurées</string>
    <string name="app_permission_fully_setup_desc">Veuillez laisser tous les paramètres activés jusqu\'à la fin de l\'épidémie.</string>
    <string name="send_otp">Vous receverez un code par SMS pour confirmer votre numéro de portable. Le code sera valable pendant 5 minutes.</string>
    <string name="title_home">Accueil</string>
    <string name="title_upload">Statistiques</string>
    <string name="title_upload_files">Téléverser</string>
    <string name="title_help">Conseils</string>
    <string name="how_to_help">Comment vous pouvez aider à stopper la propagation de COVID-19</string>
    <string name="help_action">Maintient l\'application ouverte, et laisse la s\'exécuter en arrière plan, jusqu\'à la fin de l\'epidemie</string>
    <string name="app_permission_status">État des autorisations de l\'application</string>
    <string name="bluetooth_on">Bluetooth: Activé</string>
    <string name="location_on">Autorisation position: Activé</string>
    <string name="battery_optimiser">Optimisation batterie: Désactivé</string>
    <string name="push_noti">Notifications push</string>
    <string name="share_this_app">Partagez l\'application avec votre famille et vos proches.</string>
    <string name="ask_friend">Demande à vos amis et à votre famille à aider</string>
    <string name="help_us_identify">Aidez à stopper la propagation du virus en accordant toutes les autorisations</string>
    <string name="restart_app_setup">Configuration complète de l\'application</string>
    <string name="upload_data">Envoyer mes données</string>
    <string name="for_official_use">À utiliser par les traceurs de contact</string>
    <string name="data_uploaded">Les données ont été envoyées pour contacter les traceurs</string>
    <string name="upload_agreement">En envoyant, vous acceptez de partager les données Bluetooth anonymes collectées sur les autres smartphones qui se sont trouvés à proximité de vous pendant les 21 derniers jours. Ces données permetteront de notifier les autres utilisateurs au risque d\'exposition au coronavirus COVID-19</string>
    <string name="enter_code">Entrez le code</string>
    <string name="submit">Soumettre</string>
    <string name="open_location_setting">L\'application a besoin d\'une autorisation de localisation pour fonctionner. Voulez-vous activer l\'autorisation de localisation?</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="setup_incomplete">Wiqaytna est inactive</string>
    <string name="ack_title">Votre consentement est nécessaire pour les éléments suivants:</string>
    <string name="ack_mobile">Pour stocker votre numéro de mobile dans un registre Wiqaytna sécurisé</string>
    <string name="ack_data">Pour permettre aux utilisateurs de Wiqaytna d\'envoyer des informations Le ministère de la santé sur vos rencontres, s\'ils sont confirmés ou soupçonnés d\'avoir COVID-19</string>
    <string name="otp">Veuillez saisir le code envoyé sur votre téléphone mobile via sms</string>
    <string name="keep_push_on">Gardez également les notifications push activées, afin que nous puissions vous alerter si l\'application ne scanne pas.</string>
    <string name="verification_failed">Échec de la vérification. Veuillez réessayer</string>
    <string name="invalid_otp">Le code de vérification saisi est incorrect</string>
    <string name="unknown_error">Une erreur est survenue. Veuillez réessayer</string>
    <string name="must_be_six_digit">Doit être un nombre à 6 chiffres</string>
    <string name="invalid_user">Votre compte a été désactivé. Veuillez contacter le support.</string>
    <string name="too_many_requests">Trop de demandes. Veuillez réessayer plus tard.</string>
    <string name="privacy_safeguards"><u>Garanties de confidentialité</u></string>
    <string name="service_ok_title">Wiqaytna fonctionne correctement </string>
    <string name="service_ok_body">L’application est active. </string>
    <string name="service_not_ok_title">L\’application Wiqaytna est inactive</string>
    <string name="service_not_ok_body">Wiqaytna n\'analyse pas.</string>
    <string name="service_not_ok_action">Vérifiez l\'application maintenant</string>
    <string name="share_message">Rejoignez-moi pour arrêter la propagation de COVID-19! Téléchargez Wiqaytna. Accédez à: www.wiqaytna.ma</string>
    <string name="forusermho">Utilisez cette interface uniquement si vous êtes contacté par les équipes du Ministère de la Santé.</string>
    <string name="uploadedtomho">Les données ont été reçues avec succès par les équipes du Ministère de la santé</string>
    <string name="verify_contact_mho">Vérifiez que le traceur de contact est du ministère de la santé</string>
    <string name="applicationname">wiqaynta</string>
    <string name="great">Génial!!!</string>
    <string name="read_our">Lisez notre </string>
    <string name="agree">j\'accèpte</string>
    <string name="upload_screen_next">Appuyer sur suivant uniquement si vous avez reçu un appel du ministère de la santé dont l\'objectif est d\'avoir les données des personnes avec lesquelles vous avez été en contact</string>
    <string name="next">Suivant</string>
    <string name="stpe_1">ETAPE 1</string>
    <string name="stpe_2">ETAPE 2</string>
    <string name="verification_code">Code de vérification: </string>
    <string name="make_sure">Assurez-vous qu\'ils vous donnent un code qui correspond à celui ci-dessous.</string>
    <string name="enter_pin">Merci de saisir le code communiqué par les équipes du Ministère de la Santé pour envoyer les données collectées. </string>
    <string name="invalid_pin">Code de vérification saisi est incorrect</string>
    <string name="done">Effectué</string>
    <string name="last_update">Dernière mise à jour :</string>
    <string name="ville">Ville</string>
    <string name="region">Région</string>
    <string name="age">Tranche d\'âge</string>
    <string name="woman">Femme</string>
    <string name="man">Homme</string>
    <string name="gender">Genre</string>
    <string name="code_expire">Votre code expirera dans</string>
    <string name="language_choice">العربية</string>
    <string name="verify">Vérifier</string>
    <string name="death">Décès</string>
    <string name="healing_state">Guéris</string>
    <string name="confirmed_cases">Cas confirmés</string>
    <string name="latest_epidemic_statistics">Dernières statistiques</string>
    <string name="last_update_24_hours_ago">Dernière mise à jour : </string>
    <string name="sum_cases">Statistiques depuis le début de l\'épidémie</string>
    <string name="advices">Conseils</string>
    <string name="language">Langue d\'utilisation de l\'application </string>
    <string name="arabe">العربية</string>
    <string name="french">Français</string>
    <string name="welcome">Wiqaytna est active</string>
    <string name="thanks_for_help">Merci de votre contribution à la lutte contre la propagation du coronavirus COVID-19.</string>
    <string name="conditions">Comment ça marche ?</string>
    <string name="usage">Fonctionnement de l\'application</string>
    <string name="needed_permissions"> Sehatuna requiert votre acceptation des éléments suivants :\nEnregistrer votre numéro de téléphone dans nos données sécurisées\n\nDans le cas d\'utilisateurs confirmés, envoyez des informations sur les personnes à proximité\n\nVous appeler si vous soupçonnez d\'être infecté après avoir été proche d\'une personne infectée"</string>
    <string name="conditions_bluetooth">L\’application enregistre sur votre téléphone les identifiants anonymes des portables à proximité de vous</string>
    <string name="conditions_send_infos">Vous recevrez une notification si vous avez été à proximité d\'une personne confirmée positive au COVID-19</string>
    <string name="conditions_call_you">Suivez les recommandations du Ministère de la santé qui vous seront notifiées</string>
    <string name="link_conditions"><u>Conditions générales d\’utilisation</u></string>
    <string name="first_range">15 à 25 ans</string>
    <string name="second_range">26 à 40 ans</string>
    <string name="third_range">41 à 65 ans</string>
    <string name="fourth_range">66 et plus</string>
    <string name="save">Sauvegarder</string>
    <string name="number_confirmes_cases">Répartition par région </string>
    <string name="country_code">+212</string>
    <string name="province">Province ou préfecture</string>
    <string name="data_upload">Merci de votre geste citoyen!</string>
</resources>