<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/new_blue_2"
        android:textStyle="bold"
        android:text="@string/forusermho" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/data_upload" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_upload_done" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/icon"
                android:text="@string/uploadedtomho" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/uploadCompleteFragmentActionButton"
            android:layout_alignParentBottom="true"
            android:textFontWeight="600"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="normal" />
    </RelativeLayout>

</LinearLayout>
